--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Akash Chaudhari
+name: Akash Chaudhari 2
 
 # Short bio or description (displayed in the header)
 description: Natural Language Processing engineer
