--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: akashchaudhari98
   instagram:
-  linkedin: https://www.linkedin.com/in/akash-chaudhari-a096bb154/
+  linkedin: akash-chaudhari-a096bb154
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
