--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,13 @@
 theme: jekyll-theme-midnight
 
 # Name of your site (displayed in the header)
-name: Akash Chaudhari 2
+name: Akash Chaudhari 
 
 # Short bio or description (displayed in the header)
 description: Natural Language Processing engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://www.pngkey.com/maxpic/u2y3q8u2t4i1e6y3/
 
 #
 # Flags below are optional
