--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: Akash Chaudhari
 description: Natural Language Processing engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.pngkey.com/maxpic/u2y3q8u2t4i1e6y3/
+avatar: https://i.pinimg.com/236x/e6/53/32/e6533212d7babffe8c7a469d0f0e7d95--kid-goku-dbz-gt.jpg
 
 #
 # Flags below are optional
